Created Catolica main component, with the state layer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav>
   <ul>
     <li><a routerLink="/national-library" routerLinkActive="active" ariaCurrentWhenActive="page">Biblioteca Nacional</a></li>
+    <li><a routerLink="/catolica" routerLinkActive="active" ariaCurrentWhenActive="page">Catolica</a></li>
   </ul>
 </nav>
 
